--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -3,6 +3,6 @@
     <ul>
         <li><a href="/">Home</a></li>
         <li><a href="/about">About</a></li>
-        <li><a href="/about">Projects</a></li>
+        <li><a href="/projects">Projects</a></li>
     </ul>
 </header>
